# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: github-ci.yml
gendiff/: __init__.py  cli.py  differ.py  parsers.py  tree.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/src/: gendiff.py  io.py
tests/: test_diff.py  test_main.py
tests/fixtures/: expected.json  expected_plain  expected_stylish  file2.json  file2.yml  flat_expected  nested_file1.json  nested_file2.json
