[tool.poetry]
name = "sscream_gendiff"
version = "0.1.0"
description = ""
authors = ["Sergey Sakirko <ssakirko@mail.ru>"]

packages = [
    { include = "gendiff" }
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
